--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -140,7 +140,8 @@
 
                                 </label>
                                 <div class="add-tast-form-input-required-container">
-                                    <input id="add_task_title" type="text" class="w-100 add-task-form-left-title-input"
+                                    <input id="add_task_title" type="text"
+                                        class="w-100 add-task-form-left-title-input add-task-form-input-placeholder-default"
                                         placeholder="Enter a Title" onfocus="highlightInputFields('add_task_title')">
                                     <div class="h-16">
                                         <p class="add-tast-form-required-msg">This field is required</p>
@@ -153,10 +154,9 @@
                                     <p>Description</p>
                                 </label>
                                 <div class="h-136">
-                                    <textarea name="" id="add_task_description" class="w-100 add-task-form-textarea"
-                                        onfocus="highlightInputFields('add_task_description')">
-
-                                    </textarea>
+                                    <textarea name="" id="add_task_description" placeholder="Enter a Description"
+                                        class="w-100 add-task-form-textarea add-task-form-input-placeholder-default"
+                                        onfocus="highlightInputFields('add_task_description')"></textarea>
                                     <div class="h-16"></div>
                                 </div>
                             </div>
@@ -166,14 +166,18 @@
                                         <p>Due date</p>
                                         <p class="add-task-form-required">*</p>
                                     </div>
-                                    <div class="add-tast-form-input-required-container">
-                                            <svg class="add-task-due-date-label-placeholder-svg" xmlns="http://www.w3.org/2000/svg" width="117" height="20"
+                                    <div class="add-task-form-input-required-container">
+                                        <div id="add_task_due_date_label_placeholder_svg"
+                                            class="add-task-due-date-label-placeholder-svg">
+                                            <svg class="" xmlns="http://www.w3.org/2000/svg" width="117" height="20"
                                                 viewBox="0 0 117 20" fill="none">
                                                 <path
                                                     d="M4.6307 15.4543C3.72161 15.4543 2.91906 15.2247 2.22303 14.7654C1.52701 14.3014 0.982503 13.648 0.589511 12.8052C0.196518 11.9576 2.22623e-05 10.9562 2.22623e-05 9.80091C2.22623e-05 8.65508 0.196518 7.66076 0.589511 6.81796C0.982503 5.97516 1.52938 5.32411 2.23014 4.86483C2.93089 4.40555 3.74055 4.17591 4.65911 4.17591C5.36934 4.17591 5.93042 4.29429 6.34235 4.53103C6.75902 4.76304 7.07625 5.02819 7.29406 5.32648C7.51659 5.62004 7.68942 5.86152 7.81252 6.05091H7.95457V0.681596H9.6307V15.2271H8.01139V13.5509H7.81252C7.68942 13.7498 7.51423 14.0007 7.28695 14.3038C7.05968 14.6021 6.73534 14.8696 6.31394 15.1063C5.89254 15.3383 5.33146 15.4543 4.6307 15.4543ZM4.85798 13.9486C5.53033 13.9486 6.09851 13.7735 6.56252 13.4231C7.02654 13.068 7.37928 12.5779 7.62076 11.9529C7.86224 11.3232 7.98298 10.5964 7.98298 9.77251C7.98298 8.95811 7.86461 8.24552 7.62786 7.63472C7.39112 7.01919 7.04074 6.54097 6.57673 6.20006C6.11271 5.85442 5.5398 5.6816 4.85798 5.6816C4.14775 5.6816 3.55589 5.86389 3.08241 6.22847C2.61366 6.58832 2.26091 7.07838 2.02417 7.69864C1.79216 8.31417 1.67616 9.00546 1.67616 9.77251C1.67616 10.549 1.79453 11.2545 2.03127 11.889C2.27275 12.5187 2.62786 13.0206 3.09661 13.3947C3.5701 13.764 4.15722 13.9486 4.85798 13.9486ZM17.0526 15.4543C16.1435 15.4543 15.3409 15.2247 14.6449 14.7654C13.9489 14.3014 13.4044 13.648 13.0114 12.8052C12.6184 11.9576 12.4219 10.9562 12.4219 9.80091C12.4219 8.65508 12.6184 7.66076 13.0114 6.81796C13.4044 5.97516 13.9513 5.32411 14.652 4.86483C15.3528 4.40555 16.1624 4.17591 17.081 4.17591C17.7912 4.17591 18.3523 4.29429 18.7642 4.53103C19.1809 4.76304 19.4981 5.02819 19.7159 5.32648C19.9385 5.62004 20.1113 5.86152 20.2344 6.05091H20.3764V0.681596H22.0526V15.2271H20.4333V13.5509H20.2344C20.1113 13.7498 19.9361 14.0007 19.7088 14.3038C19.4816 14.6021 19.1572 14.8696 18.7358 15.1063C18.3144 15.3383 17.7533 15.4543 17.0526 15.4543ZM17.2799 13.9486C17.9522 13.9486 18.5204 13.7735 18.9844 13.4231C19.4484 13.068 19.8012 12.5779 20.0426 11.9529C20.2841 11.3232 20.4049 10.5964 20.4049 9.77251C20.4049 8.95811 20.2865 8.24552 20.0497 7.63472C19.813 7.01919 19.4626 6.54097 18.9986 6.20006C18.5346 5.85442 17.9617 5.6816 17.2799 5.6816C16.5696 5.6816 15.9778 5.86389 15.5043 6.22847C15.0355 6.58832 14.6828 7.07838 14.446 7.69864C14.214 8.31417 14.098 9.00546 14.098 9.77251C14.098 10.549 14.2164 11.2545 14.4531 11.889C14.6946 12.5187 15.0497 13.0206 15.5185 13.3947C15.992 13.764 16.5791 13.9486 17.2799 13.9486ZM30.4972 -0.000222921L25.8097 17.4146H24.2756L28.9631 -0.000222921H30.4972ZM32.484 15.2271V4.31796H34.1034V6.02251H34.2454C34.4727 5.44012 34.8396 4.98794 35.3463 4.66597C35.8529 4.33927 36.4613 4.17591 37.1715 4.17591C37.8912 4.17591 38.4902 4.33927 38.9684 4.66597C39.4514 4.98794 39.8278 5.44012 40.0977 6.02251H40.2113C40.4907 5.45906 40.9097 5.01161 41.4684 4.68018C42.0271 4.344 42.6971 4.17591 43.4784 4.17591C44.4537 4.17591 45.2516 4.48131 45.8718 5.09211C46.4921 5.69817 46.8022 6.64277 46.8022 7.92591V15.2271H45.1261V7.92591C45.1261 7.12099 44.9059 6.54571 44.4656 6.20006C44.0252 5.85442 43.5068 5.6816 42.9102 5.6816C42.1431 5.6816 41.5489 5.9136 41.1275 6.37762C40.7061 6.8369 40.4954 7.41929 40.4954 8.12478V15.2271H38.7909V7.75546C38.7909 7.13519 38.5896 6.63567 38.1872 6.25688C37.7847 5.87336 37.2662 5.6816 36.6318 5.6816C36.1962 5.6816 35.789 5.7976 35.4102 6.02961C35.0361 6.26161 34.7331 6.58358 34.5011 6.99552C34.2738 7.40271 34.1602 7.87383 34.1602 8.40887V15.2271H32.484ZM49.8669 15.2271V4.31796H51.4862V6.02251H51.6282C51.8555 5.44012 52.2224 4.98794 52.7291 4.66597C53.2357 4.33927 53.8441 4.17591 54.5544 4.17591C55.2741 4.17591 55.873 4.33927 56.3512 4.66597C56.8342 4.98794 57.2106 5.44012 57.4805 6.02251H57.5941C57.8735 5.45906 58.2925 5.01161 58.8512 4.68018C59.4099 4.344 60.0799 4.17591 60.8612 4.17591C61.8366 4.17591 62.6344 4.48131 63.2546 5.09211C63.8749 5.69817 64.185 6.64277 64.185 7.92591V15.2271H62.5089V7.92591C62.5089 7.12099 62.2887 6.54571 61.8484 6.20006C61.408 5.85442 60.8896 5.6816 60.293 5.6816C59.5259 5.6816 58.9317 5.9136 58.5103 6.37762C58.0889 6.8369 57.8782 7.41929 57.8782 8.12478V15.2271H56.1737V7.75546C56.1737 7.13519 55.9724 6.63567 55.57 6.25688C55.1675 5.87336 54.6491 5.6816 54.0146 5.6816C53.579 5.6816 53.1718 5.7976 52.793 6.02961C52.4189 6.26161 52.1159 6.58358 51.8839 6.99552C51.6566 7.40271 51.543 7.87383 51.543 8.40887V15.2271H49.8669ZM72.3917 -0.000222921L67.7042 17.4146H66.1701L70.8576 -0.000222921H72.3917ZM75.4581 19.318C75.174 19.318 74.9207 19.2943 74.6982 19.2469C74.4756 19.2043 74.3218 19.1617 74.2365 19.1191L74.6627 17.6418C75.0699 17.746 75.4297 17.7839 75.7422 17.7555C76.0547 17.7271 76.3317 17.5874 76.5732 17.3364C76.8194 17.0902 77.0443 16.6901 77.2479 16.1361L77.5604 15.2839L73.5263 4.31796H75.3445L78.3558 13.0111H78.4695L81.4808 4.31796H83.299L78.6683 16.818C78.46 17.3814 78.202 17.8478 77.8942 18.2171C77.5864 18.5912 77.229 18.8681 76.8218 19.0481C76.4193 19.228 75.9647 19.318 75.4581 19.318ZM86.5909 19.318C86.3068 19.318 86.0535 19.2943 85.831 19.2469C85.6085 19.2043 85.4546 19.1617 85.3693 19.1191L85.7955 17.6418C86.2027 17.746 86.5625 17.7839 86.875 17.7555C87.1875 17.7271 87.4645 17.5874 87.706 17.3364C87.9522 17.0902 88.1771 16.6901 88.3807 16.1361L88.6932 15.2839L84.6591 4.31796H86.4773L89.4887 13.0111H89.6023L92.6137 4.31796H94.4318L89.8012 16.818C89.5928 17.3814 89.3348 17.8478 89.027 18.2171C88.7192 18.5912 88.3618 18.8681 87.9546 19.0481C87.5521 19.228 87.0976 19.318 86.5909 19.318ZM97.7237 19.318C97.4397 19.318 97.1863 19.2943 96.9638 19.2469C96.7413 19.2043 96.5874 19.1617 96.5022 19.1191L96.9283 17.6418C97.3355 17.746 97.6953 17.7839 98.0078 17.7555C98.3203 17.7271 98.5973 17.5874 98.8388 17.3364C99.085 17.0902 99.3099 16.6901 99.5135 16.1361L99.826 15.2839L95.7919 4.31796H97.6101L100.621 13.0111H100.735L103.746 4.31796H105.565L100.934 16.818C100.726 17.3814 100.468 17.8478 100.16 18.2171C99.8521 18.5912 99.4946 18.8681 99.0874 19.0481C98.6849 19.228 98.2304 19.318 97.7237 19.318ZM108.857 19.318C108.572 19.318 108.319 19.2943 108.097 19.2469C107.874 19.2043 107.72 19.1617 107.635 19.1191L108.061 17.6418C108.468 17.746 108.828 17.7839 109.141 17.7555C109.453 17.7271 109.73 17.5874 109.972 17.3364C110.218 17.0902 110.443 16.6901 110.646 16.1361L110.959 15.2839L106.925 4.31796H108.743L111.754 13.0111H111.868L114.879 4.31796H116.697L112.067 16.818C111.858 17.3814 111.6 17.8478 111.293 18.2171C110.985 18.5912 110.627 18.8681 110.22 19.0481C109.818 19.228 109.363 19.318 108.857 19.318Z"
-                                                    fill="black" />
+                                                    fill="#D1D1D1" />
                                             </svg>
-                                        <input id="add_task_due_date" class="w-100 add-task-form-default-inputs"
+                                        </div>
+                                        <input id="add_task_due_date"
+                                            class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-default"
                                             type="date" placeholder="dd/mm/yyyy"
                                             onclick="openCalender('add_task_due_date')"
                                             onfocus="highlightInputFields('add_task_due_date')">
@@ -181,8 +185,8 @@
                                             <p class="add-tast-form-required-msg">This field is required</p>
                                         </div>
                                     </div>
-                                    <svg class="add-task-due-date-label-calender-svg" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
-                                        fill="none">
+                                    <svg class="add-task-due-date-label-calender-svg" xmlns="http://www.w3.org/2000/svg"
+                                        width="24" height="24" viewBox="0 0 24 24" fill="none">
                                         <mask id="mask0_387837_2602" style="mask-type:alpha" maskUnits="userSpaceOnUse"
                                             x="0" y="0" width="24" height="24">
                                             <rect width="24" height="24" fill="#D9D9D9" />
@@ -261,7 +265,8 @@
                             <div class="h-80">
                                 <label for="add_task_assigned_to" class="add-task-assigned-to-category-label">
                                     <p>Assigned to</p>
-                                    <input id="add_task_assigned_to" class="w-100 add-task-form-default-inputs"
+                                    <input id="add_task_assigned_to"
+                                        class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
                                         type="text" onclick="toggleAssignedToContactList()"
                                         onfocus="highlightInputFields('add_task_assigned_to')"
                                         placeholder="Select contacts to assign">
@@ -292,8 +297,9 @@
                                         <p>Category</p>
                                         <p class="add-task-form-required">*</p>
                                     </div>
-                                    <input id="add_task_category" class="w-100 add-task-form-default-inputs" type="text"
-                                        placeholder="Select task category" onclick="toggleCategoryList()"
+                                    <input id="add_task_category"
+                                        class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
+                                        type="text" placeholder="Select task category" onclick="toggleCategoryList()"
                                         onfocus="highlightInputFields('add_task_category')">
                                     <svg id="add_task_form_category_arrow_svg"
                                         class="add-task-form-assigned-to-arrow-down-svg"
@@ -327,8 +333,9 @@
                             <div class="h-80">
                                 <label for="add_task_subtasks" class="add-task-assigned-to-category-label">
                                     <p>Subtasks</p>
-                                    <input id="add_task_subtasks" class="w-100 add-task-form-default-inputs" type="text"
-                                        placeholder="Add new subtask"
+                                    <input id="add_task_subtasks"
+                                        class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-default"
+                                        type="text" placeholder="Add new subtask"
                                         onfocus="highlightInputFields('add_task_subtasks')">
                                     <div id="add_task_form_subtasks_btns" class="add-task-form-subtasks-btns d_none">
                                         <button onclick="resetAddTaskSubtasksInputField()">
