added add_task_v2_responsive.css to add_task_v2

--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/add_task_v2.css">
+    <link rel="stylesheet" href="./style/add_task_v2_responsive.css">
     <title>Add Task</title>
 </head>
 
@@ -128,7 +129,7 @@
                     </div>
                 </div>
             </header>
-            <div class="add-task-content-container add-task-main">
+            <div class="add-task-main">
                 <h2>Add Task</h2>
                 <form class="add-task-form" action="" onsubmit="return false;">
                     <div class="add-task-form-main">
