--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -131,7 +131,7 @@
             </header>
             <div class="add-task-main">
                 <h2>Add Task</h2>
-                <form class="add-task-form" action="" onsubmit="return false;">
+                <form id="add_task_form" class="add-task-form" action="" onsubmit="return false;">
                     <div class="add-task-form-main">
                         <section class="add-task-form-left">
                             <div class="h-96">
@@ -397,7 +397,7 @@
                                         stroke-linejoin="round" />
                                 </svg>
                             </button>
-                            <button class="add-task-form-create-btn" disabled>
+                            <button class="add-task-form-create-btn" onclick="createNewTask()">
                                 <p>Create Task</p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
