--- a/board.html
+++ b/board.html
@@ -53,7 +53,7 @@
                     </a>
                 </li>
                 <li>
-                    <a class="navbar-link" href="./add_task.html">
+                    <a class="navbar-link" href="./add_task_v2.html">
                         <div class="category-logo">
                             <svg width="30" height="30" viewBox="0 0 30 30" fill="none">
                                 <mask id="mask0_373102_726" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0"
