changed assigned-to function

--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -263,7 +263,7 @@
                                 </div>
 
                             </div>
-                            <div class="h-80">
+                            <div id="add_task_form_assigned_to_section" class="add-task-form-assigned-to-section h-80">
                                 <label for="add_task_assigned_to" class="add-task-assigned-to-category-label">
                                     <p>Assigned to</p>
                                     <input id="add_task_assigned_to"
@@ -286,11 +286,15 @@
                                         </g>
                                     </svg>
                                 </label>
-                                <div class="add-task-form-assigned-to-dropdown">
+                                <div class="add-task-form-assigned-to-dropdown" >
                                     <ul id="add_task_form_assigned_to_dropdown_contacts"
                                         class="add-task-form-assigned-to-dropdown-contacts d_none">
                                     </ul>
                                 </div>
+                                <div id="current_assigned_to_contacts" class="current-assigned-to-contacts-container d_none">
+                                    
+                                </div>
+                                
                             </div>
                             <div class="h-80">
                                 <label for="add_task_category" class="add-task-assigned-to-category-label">
