--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -134,14 +134,14 @@
                 <form id="add_task_form" class="add-task-form" action="" onsubmit="return false;">
                     <div class="add-task-form-main">
                         <section class="add-task-form-left">
-                            <div class="h-96">
+                            <div class="h-96" onclick="event.stopPropagation()">
                                 <label for="add_task_title">
                                     <p>Titel</p>
                                     <p class="add-task-form-required">*</p>
 
                                 </label>
                                 <div class="add-tast-form-input-required-container">
-                                    <input id="add_task_title" type="text"
+                                    <input id="add_task_title" type="text" 
                                         class="w-100 add-task-form-left-title-input add-task-form-input-placeholder-default"
                                         placeholder="Enter a Title" onfocus="highlightInputFields('add_task_title')">
                                     <div class="h-16">
@@ -150,7 +150,7 @@
                                 </div>
                             </div>
 
-                            <div>
+                            <div onclick="event.stopPropagation()">
                                 <label for="add_task_description">
                                     <p>Description</p>
                                 </label>
@@ -161,7 +161,7 @@
                                     <div class="h-16"></div>
                                 </div>
                             </div>
-                            <div class="h-96">
+                            <div class="h-96" onclick="event.stopPropagation()">
                                 <label for="add_task_due_date" class="add-task-due-date-label">
                                     <div class="add-task-required-label-head">
                                         <p>Due date</p>
@@ -344,7 +344,7 @@
                                     </ul>
                                 </div>
                             </div>
-                            <div class="h-80">
+                            <div class="h-80" onclick="event.stopPropagation()">
                                 <label for="add_task_subtasks" class="add-task-assigned-to-category-label">
                                     <p>Subtasks</p>
                                     <input id="add_task_subtasks"
