--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -400,7 +400,7 @@
                             <p>This fiels is required</p>
                         </div>
                         <div class="add-task-form-btns">
-                            <button class="add-task-form-clear-btn">
+                            <button class="add-task-form-clear-btn" onclick="clearForm()">
                                 <p>Clear</p>
                                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"
                                     fill="none">
