summary 2 Header styled

--- a/summary_2.html
+++ b/summary_2.html
@@ -152,7 +152,7 @@
                 </div>
             </header>
             <main class="summary-main">
-                <header>
+                <header class="summary-header2">
                     <h2>Join 360</h2>
                     <div></div>
                     <span>Key Metrics at a Glance</span>
