--- a/summary_2.html
+++ b/summary_2.html
@@ -157,27 +157,41 @@
                     <div></div>
                     <span>Key Metrics at a Glance</span>
                 </header>
-                <section>
-                    <div>
-                        <div>
-                            <div>
+                <section class="summary-card">
+                    <div class="card-row">
+                        <div class="first-card-row">
+                            <div class="first-card-row-logo">
                                 <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
                                     <mask id="mask0_390335_1376" style="mask-type:alpha" maskUnits="userSpaceOnUse"
                                         x="0" y="0" width="32" height="32">
                                         <rect width="32" height="32" fill="#D9D9D9" />
                                     </mask>
                                     <g mask="url(#mask0_390335_1376)">
-                                        <path d="M6.66667 25.3332H8.53333L20.0333 13.8332L18.1667 11.9665L6.66667 23.4665V25.3332ZM25.7333 11.8998L20.0667 6.29984L21.9333 4.43317C22.4444 3.92206 23.0722 3.6665 23.8167 3.6665C24.5611 3.6665 25.1889 3.92206 25.7 4.43317L27.5667 6.29984C28.0778 6.81095 28.3444 7.42761 28.3667 8.14984C28.3889 8.87206 28.1444 9.48873 27.6333 9.99984L25.7333 11.8998ZM23.8 13.8665L9.66667 27.9998H4V22.3332L18.1333 8.19984L23.8 13.8665Z" fill="white" />
+                                        <path
+                                            d="M6.66667 25.3332H8.53333L20.0333 13.8332L18.1667 11.9665L6.66667 23.4665V25.3332ZM25.7333 11.8998L20.0667 6.29984L21.9333 4.43317C22.4444 3.92206 23.0722 3.6665 23.8167 3.6665C24.5611 3.6665 25.1889 3.92206 25.7 4.43317L27.5667 6.29984C28.0778 6.81095 28.3444 7.42761 28.3667 8.14984C28.3889 8.87206 28.1444 9.48873 27.6333 9.99984L25.7333 11.8998ZM23.8 13.8665L9.66667 27.9998H4V22.3332L18.1333 8.19984L23.8 13.8665Z"
+                                            fill="white" />
                                     </g>
                                 </svg>
                             </div>
+                            <div class="first-card-row-desc">
+                                <h3>1</h3>
+                                <span>To-do</span>
+                            </div>
                         </div>
-                        <div>
-
+                        <div class="first-card-row">
+                            <div class="first-card-row-logo">
+                                <svg width="37" height="30" viewBox="0 0 37 30"fill="none">
+                                    <path d="M3.5 14.566L14.7288 25.6321L33.4434 3.5" stroke="white" stroke-width="7" stroke-linecap="round" stroke-linejoin="round" />
+                                </svg>
+                            </div>
+                            <div class="first-card-row-desc">
+                                <h3>1</h3>
+                                <span>Done</span>
+                            </div>
                         </div>
                     </div>
-                    <div></div>
-                    <div></div>
+                    <div class="card-row"></div>
+                    <div class="card-row"></div>
                 </section>
 
             </main>
