--- a/summary_2.html
+++ b/summary_2.html
@@ -157,71 +157,99 @@
                     <div></div>
                     <span>Key Metrics at a Glance</span>
                 </header>
-                <section class="summary-card">
-                    <div class="card-row">
 
-                        <div class="first-card-row">
-                            <div class="first-card-row-logo">
-                                <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
-                                    <mask id="mask0_390335_1376" style="mask-type:alpha" maskUnits="userSpaceOnUse"
-                                        x="0" y="0" width="32" height="32">
-                                        <rect width="32" height="32" fill="#D9D9D9" />
-                                    </mask>
-                                    <g mask="url(#mask0_390335_1376)">
+                <section class="summary-main-section">
+
+                    <section class="summary-card">
+                        <div class="card-row">
+
+                            <div class="first-card-row">
+                                <div class="first-card-row-logo">
+                                    <svg width="32" height="32" viewBox="0 0 32 32" fill="none">
+                                        <mask id="mask0_390335_1376" style="mask-type:alpha" maskUnits="userSpaceOnUse"
+                                            x="0" y="0" width="32" height="32">
+                                            <rect width="32" height="32" fill="#D9D9D9" />
+                                        </mask>
+                                        <g mask="url(#mask0_390335_1376)">
+                                            <path
+                                                d="M6.66667 25.3332H8.53333L20.0333 13.8332L18.1667 11.9665L6.66667 23.4665V25.3332ZM25.7333 11.8998L20.0667 6.29984L21.9333 4.43317C22.4444 3.92206 23.0722 3.6665 23.8167 3.6665C24.5611 3.6665 25.1889 3.92206 25.7 4.43317L27.5667 6.29984C28.0778 6.81095 28.3444 7.42761 28.3667 8.14984C28.3889 8.87206 28.1444 9.48873 27.6333 9.99984L25.7333 11.8998ZM23.8 13.8665L9.66667 27.9998H4V22.3332L18.1333 8.19984L23.8 13.8665Z"
+                                                fill="white" />
+                                        </g>
+                                    </svg>
+                                </div>
+                                <div class="first-card-row-desc">
+                                    <h3>1</h3>
+                                    <span>To-do</span>
+                                </div>
+                            </div>
+
+                            <div class="first-card-row">
+
+                                <div class="first-card-row-logo">
+                                    <svg width="37" height="30" viewBox="0 0 37 30" fill="none">
+                                        <path d="M3.5 14.566L14.7288 25.6321L33.4434 3.5" stroke="white"
+                                            stroke-width="7" stroke-linecap="round" stroke-linejoin="round" />
+                                    </svg>
+                                </div>
+
+                                <div class="first-card-row-desc">
+                                    <h3>1</h3>
+                                    <span>Done</span>
+                                </div>
+
+                            </div>
+
+                        </div>
+
+                        <div class="second-card-row">
+
+                            <section class="summary-category">
+                                <div class="summary-category-logo">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="35" height="26" viewBox="0 0 35 26"
+                                        fill="none">
                                         <path
-                                            d="M6.66667 25.3332H8.53333L20.0333 13.8332L18.1667 11.9665L6.66667 23.4665V25.3332ZM25.7333 11.8998L20.0667 6.29984L21.9333 4.43317C22.4444 3.92206 23.0722 3.6665 23.8167 3.6665C24.5611 3.6665 25.1889 3.92206 25.7 4.43317L27.5667 6.29984C28.0778 6.81095 28.3444 7.42761 28.3667 8.14984C28.3889 8.87206 28.1444 9.48873 27.6333 9.99984L25.7333 11.8998ZM23.8 13.8665L9.66667 27.9998H4V22.3332L18.1333 8.19984L23.8 13.8665Z"
+                                            d="M32.3128 25.1162C31.9118 25.1169 31.5211 24.9873 31.1982 24.7465L17.093 14.2167L2.98773 24.7465C2.78971 24.8947 2.56479 25.0019 2.32583 25.062C2.08687 25.1222 1.83854 25.1341 1.59502 25.0971C1.3515 25.0602 1.11755 24.975 0.906549 24.8466C0.695544 24.7181 0.511607 24.5489 0.365241 24.3485C0.218876 24.1481 0.112947 23.9205 0.0535029 23.6787C-0.00594092 23.4369 -0.0177355 23.1856 0.0187927 22.9391C0.0925645 22.4415 0.358687 21.9938 0.758615 21.6947L15.9784 10.3213C16.301 10.0796 16.6917 9.94922 17.093 9.94922C17.4943 9.94922 17.885 10.0796 18.2075 10.3213L33.4274 21.6947C33.7452 21.9317 33.9808 22.2642 34.1007 22.6448C34.2207 23.0254 34.2187 23.4347 34.0951 23.8141C33.9715 24.1935 33.7326 24.5237 33.4125 24.7575C33.0925 24.9913 32.7076 25.1169 32.3128 25.1162Z"
                                             fill="white" />
-                                    </g>
-                                </svg>
-                            </div>
-                            <div class="first-card-row-desc">
-                                <h3>1</h3>
-                                <span>To-do</span>
-                            </div>
-                        </div>
+                                        <path
+                                            d="M32.3127 15.1645C31.9116 15.1652 31.521 15.0357 31.1981 14.7949L17.0929 4.265L2.98762 14.7949C2.58769 15.094 2.08671 15.2201 1.5949 15.1455C1.10309 15.0708 0.660727 14.8015 0.365127 14.3968C0.0695279 13.9921 -0.0550935 13.4852 0.0186784 12.9875C0.0924502 12.4898 0.358572 12.0421 0.758501 11.743L15.9783 0.36961C16.3009 0.127979 16.6916 -0.00244141 17.0929 -0.00244141C17.4942 -0.00244141 17.8849 0.127979 18.2074 0.36961L33.4272 11.743C33.745 11.98 33.9807 12.3126 34.1006 12.6932C34.2205 13.0738 34.2186 13.483 34.095 13.8624C33.9714 14.2418 33.7325 14.572 33.4124 14.8058C33.0924 15.0397 32.7075 15.1652 32.3127 15.1645Z"
+                                            fill="white" />
+                                    </svg>
+                                </div>
+                                <div class="second-card-row-desc">
+                                    <h3>1</h3>
+                                    <span>Urgent</span>
+                                </div>
+                            </section>
 
-                        <div class="first-card-row">
+                            <div class="summary-card-divider"></div>
 
-                            <div class="first-card-row-logo">
-                                <svg width="37" height="30" viewBox="0 0 37 30" fill="none">
-                                    <path d="M3.5 14.566L14.7288 25.6321L33.4434 3.5" stroke="white" stroke-width="7"
-                                        stroke-linecap="round" stroke-linejoin="round" />
-                                </svg>
-                            </div>
-
-                            <div class="first-card-row-desc">
-                                <h3>1</h3>
-                                <span>Done</span>
-                            </div>
+                            <section class="deadline-section">
+                                <span>October 30, 2025</span>
+                                <p>Upcoming Deadline</p>
+                            </section>
 
                         </div>
 
-                    </div>
-
-                    <div class="second-card-row">
-
-                        <section class="summary-category">
-                            <div class="summary-category-logo">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="35" height="26" viewBox="0 0 35 26"fill="none">
-                                    <path d="M32.3128 25.1162C31.9118 25.1169 31.5211 24.9873 31.1982 24.7465L17.093 14.2167L2.98773 24.7465C2.78971 24.8947 2.56479 25.0019 2.32583 25.062C2.08687 25.1222 1.83854 25.1341 1.59502 25.0971C1.3515 25.0602 1.11755 24.975 0.906549 24.8466C0.695544 24.7181 0.511607 24.5489 0.365241 24.3485C0.218876 24.1481 0.112947 23.9205 0.0535029 23.6787C-0.00594092 23.4369 -0.0177355 23.1856 0.0187927 22.9391C0.0925645 22.4415 0.358687 21.9938 0.758615 21.6947L15.9784 10.3213C16.301 10.0796 16.6917 9.94922 17.093 9.94922C17.4943 9.94922 17.885 10.0796 18.2075 10.3213L33.4274 21.6947C33.7452 21.9317 33.9808 22.2642 34.1007 22.6448C34.2207 23.0254 34.2187 23.4347 34.0951 23.8141C33.9715 24.1935 33.7326 24.5237 33.4125 24.7575C33.0925 24.9913 32.7076 25.1169 32.3128 25.1162Z" fill="white" />
-                                    <path d="M32.3127 15.1645C31.9116 15.1652 31.521 15.0357 31.1981 14.7949L17.0929 4.265L2.98762 14.7949C2.58769 15.094 2.08671 15.2201 1.5949 15.1455C1.10309 15.0708 0.660727 14.8015 0.365127 14.3968C0.0695279 13.9921 -0.0550935 13.4852 0.0186784 12.9875C0.0924502 12.4898 0.358572 12.0421 0.758501 11.743L15.9783 0.36961C16.3009 0.127979 16.6916 -0.00244141 17.0929 -0.00244141C17.4942 -0.00244141 17.8849 0.127979 18.2074 0.36961L33.4272 11.743C33.745 11.98 33.9807 12.3126 34.1006 12.6932C34.2205 13.0738 34.2186 13.483 34.095 13.8624C33.9714 14.2418 33.7325 14.572 33.4124 14.8058C33.0924 15.0397 32.7075 15.1652 32.3127 15.1645Z" fill="white" />
-                                </svg>
+                        <div class="card-row">
+                            <div class="third-card-row">
+                                <h3>5</h3>
+                                <span>Tasks in Board</span>
                             </div>
-                            <div class="second-card-row-desc">
-                                <h3>1</h3>
-                                <span>Urgent</span>
+                            <div class="third-card-row">
+                                <h3>5</h3>
+                                <span>Tasks in Board</span>
                             </div>
-                        </section>
+                            <div class="third-card-row">
+                                <h3>5</h3>
+                                <span>Tasks in Board</span>
+                            </div>
+                        </div>
+                    </section>
 
-                        <div class="summary-card-divider"></div>
+                    <section class="">
 
-                        <section class="deadline-section">
-                            <span>October 30, 2025</span>
-                            <p>Upcoming Deadline</p>
-                        </section>
+                    </section>
 
-                    </div>
-                    <div class="card-row"></div>
                 </section>
 
             </main>
