summary2 overlay is done

--- a/summary_2.html
+++ b/summary_2.html
@@ -246,8 +246,9 @@
                         </div>
                     </section>
 
-                    <section class="">
-
+                    <section class="greeting-section">
+                        <span>Good morning,</span>
+                        <h3>Sofia Müller</h3>
                     </section>
 
                 </section>
