summary2 small fixes and section for animated overlay

--- a/summary_2.html
+++ b/summary_2.html
@@ -151,6 +151,9 @@
                     </div>
                 </div>
             </header>
+            <section onclick="stopPropagation(event)" class="animated-overlay-background">
+                <div class="animated-overlay" id="animated_overlay_id"></div>
+            </section>
             <main class="summary-main">
                 <header class="summary-header2">
                     <h2>Join 360</h2>
