--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -294,7 +294,7 @@
                             <div id="add_task_form_assigned_to_section" class="add-task-form-assigned-to-section h-80"
                                 onclick="event.stopPropagation()">
                                 <label for="add_task_assigned_to" class="add-task-assigned-to-category-label"
-                                    onclick="toggleAssignedToContactList()">
+                                    onclick="toggleAssignedToContactList()" onkeyup="filterInputValue()">
                                     <p>Assigned to</p>
                                     <input id="add_task_assigned_to"
                                         class="w-100 add-task-form-default-inputs add-task-form-input-placeholder-black"
