--- a/add_task_v2.html
+++ b/add_task_v2.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/add_task_v2.css">
+    <link rel="stylesheet" href="./style/add_task_v2_overlay.css">
     <link rel="stylesheet" href="./style/add_task_v2_responsive.css">
     <title>Add Task</title>
 </head>
