small bug fixes in summary

--- a/summary.html
+++ b/summary.html
@@ -107,7 +107,7 @@
             </ul>
         </nav>
 
-        <section class="main">
+        <main>
 
             <header class="main-header">
                 <div class="content-limit-header">
@@ -266,9 +266,12 @@
 
             </main>
 
-        </section>
+        </main>
 
     </section>
+      <script src="./script/template.js"></script>
+  <script src="./script/summary.js"></script>
+  <script src="./script/script.js"></script>
 </body>
 
 </html>
